# centra_sdk

./: .gitignore  pyproject.toml
src/centra_sdk/: app.py  dependencies.py  handler_registry.py  main.py
src/centra_sdk/models/connector/: __init__.py  version.py
src/centra_sdk/models/connector/v1/common/: common.py  inventory.py
src/centra_sdk/models/connector/v1/consumer/: __init__.py  agents.py  enforcement.py
src/centra_sdk/models/connector/v1/k8s/: k8s_inventory.py
src/centra_sdk/models/connector/v1/operations/: config.py  health.py  info.py  log.py  onboard.py
src/centra_sdk/models/connector/v1/provider/: inventory.py  lookup.py  reveal.py
src/centra_sdk/routers/: agents.py  configuration.py  control.py  enforcement.py  health.py  info.py  inventory.py  logging.py  onboarding.py  operations.py
tests/: test_control.py  test_sdk.py
