[project]
name = "centra-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "ivasylenko",email = "ivasylen@akamai.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "centra_sdk", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
